# playwright-trace-browser

./: .buildinfo  .releaserc.yaml  CHANGELOG.md  flexlate.json  genindex.html  index.html  justfile  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  sitemap.xml  tutorial.html
.venvs/docs/: pyproject.toml
.venvs/lint/: pyproject.toml
_modules/: index.html
_modules/playwright_trace_browser/: app.html
_sources/: index.md.txt
_sources/api/: modules.rst.txt  playwright_trace_browser.rst.txt
api/: modules.html  playwright_trace_browser.html
auto_examples/: index.html  sg_execution_times.html
binder/: requirements.txt
docsrc/: Makefile  autobuild.sh
docsrc/source/: conf.py  tutorial.rst
playwright_trace_browser/: __init__.py  __main__.py  _folder.py  app.py
